[project]
name = "ml-algorithms"
version = "0.1.0"
description = "ML algorithms from scratch using python and numpy"
authors = [
    {name = "amrita.nitt95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "torch (==2.2.2)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
